# dual_franka_robotiq

./: README.md
custom_franka_controllers/: CMakeLists.txt  custom_franka_controllers.xml  package.xml
custom_franka_controllers/include/custom_franka_controllers/: cartesian_acceleration_controller.hpp  cartesian_force_controller.hpp  cartesian_force_to_velocity_controller.hpp  cartesian_velocity_controller_ses.hpp  cartesian_velocity_example_controller.hpp  joint_impedance_ik_controller.hpp  robot_utils_impedance.hpp
custom_franka_controllers/src/: cartesian_acceleration_controller.cpp  cartesian_force_controller.cpp  cartesian_force_to_velocity_controller.cpp  cartesian_velocity_controller_ses.cpp  cartesian_velocity_example_controller.cpp  joint_impedance_ik_controller.cpp
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: ForceControllerCmd.msg  MarkerPoseArray.msg  SesStarter.msg  SesStarterAngle.msg
franka_robotiq/config/: controllers.yaml  controllers_real_robot.yaml  controllers_repo_version.yaml
franka_robotiq/launch/: gazebo_franka_ft_sensor_robotiq.launch.py  gazebo_franka_robotiq.launch.py  kaleel_system_test.launch.py  moveit_franka_ft_sensor_robotiq.launch.py  moveit_franka_robotiq.launch.py  real_robot_ft_sensor_robotiq_moveit_cartesian.launch.py  real_robot_ft_sensor_robotiq_ns.launch.py  real_robot_repo_launcher_moveit_cartesian.launch.py  ses_system.launch.py  teleop_controllers_system.launch.py
franka_robotiq/urdf/: fr3_ft_sensor.srdf.xacro  fr3_robotiq.urdf.xacro  franka_arm.ros2_control.xacro  franka_robotiq.xacro
franka_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
franka_robotiq_moveit_config/config/: chomp_planning.yaml  custom_moveit_controllers.yaml  fr3.ros2_control.xacro  fr3.srdf  fr3.srdf.xacro  fr3.urdf.xacro  fr3_ft_sensor.srdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_v2.rviz  multi_custom_moveit_controllers.yaml  multi_fr3.srdf.xacro  multi_initial_positions.yaml  multi_joint_limits.yaml  multi_kinematics.yaml  multi_ompl_planning.yaml  ompl_planning.yaml  ros2_controllers.yaml
franka_robotiq_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mujoco_ros/: package.xml  setup.py
mujoco_ros/config/: ses_controller_exp2.yaml  ses_controller_exp3.yaml  ses_controller_exp4.yaml  ses_controller_exp5.yaml  ses_controller_real_exp1.yaml  ses_controller_real_exp2.yaml  ses_controller_real_exp2_v1.yaml  ses_controller_real_exp2_v2.yaml  ses_controller_real_exp2_v2_1.yaml  ses_controller_real_exp2_v3.yaml  ses_controller_real_exp3_high.yaml  ses_controller_real_exp3_low.yaml  ses_controller_real_exp3_slow_stable.yaml  ses_controller_real_exp4_v1.yaml  ses_controller_real_exp4_v2.yaml  ses_controller_real_exp5_v1.yaml  ses_controller_real_exp5_v2.yaml  ses_controller_real_exp6_v1.yaml  ses_controller_real_exp6_v2.yaml  ses_controller_real_exp6_v3.yaml  ses_controller_real_exp7_v1.yaml  ses_controller_rod.yaml
mujoco_ros/data/: exp2_P_Obs_Refined.npy  exp3_P_Obs_Refined.npy  exp3_logged_data.json  exp3_logs.json
mujoco_ros/data/exp1_real/: P_Obs_Refined_target1.npy  logged_data.json
mujoco_ros/data/exp1_sim/: P_Obs_Refined.npy  logged_data.json
mujoco_ros/data/exp2_real/: P_Obs_Refined.npy  logged_data.json
mujoco_ros/data/exp2_sim/: exp2_logged_data.json  exp2_logs.json
mujoco_ros/data/exp5/: P_Obs_Refined.npy
mujoco_ros/data/exp5_sim/: logged_data.json
mujoco_ros/mujoco_ros/: ses_controller_real_exp1.py  ses_controller_real_exp2.py  ses_controller_real_exp3.py  ses_controller_real_generic.py  ses_controller_real_generic_angle.py  ses_controller_real_generic_visibility.py  utils.py
mujoco_ros/test/older/: diffik_custom.py  diffik_custom_.py  diffik_custom_services.py  fourier_estimation.py  motion_services.py  mujoco_ros_ses.py  online_jacobian.py  ses_controller.py  (+3 more)
nordbo_ft_sensors/: package.xml  setup.cfg  setup.py
nordbo_ft_sensors/launch/: run_ft_sensor.launch.py
nordbo_ft_sensors/nordbo_ft_sensors/: run.py  run_old_code.py
nordbo_ft_sensors/test/: test_script.py
python_scripts_pkg/: setup.py
python_scripts_pkg/config/: franka_teleop.rviz
python_scripts_pkg/files/: force_log.txt  pos_log.txt
python_scripts_pkg/launch/: rviz_teleop.launch.py
python_scripts_pkg/python_scripts_pkg/: aruco_tracker_d455.py  aruco_tracker_d455_ros.py  aruco_tracker_reference_d455_ros.py  aruco_tracker_reference_d455_ros_angle.py  aruco_tracker_reference_d455_ros_visibility.py  force_controller_gui.py  interactive_marker_rviz.py  interactive_marker_rviz2.py  kaleel_app_force_impulse.py  kaleel_app_test.py  ros1_interactive_marker_rviz.py  ses_pretension.py  ses_pretension_angle.py  ses_pretension_ring.py  ses_pretension_visibility.py  slider_publisher.py  velocity_controller_gui.py
(+51 files in other folders)
